added /bu alias, and a few big bug fixes